[gd_scene load_steps=7 format=2]

[ext_resource path="res://PTGplayersprite.png" type="Texture" id=1]
[ext_resource path="res://Player1.gd" type="Script" id=2]
[ext_resource path="res://PickupZone.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.5, 11 )

[sub_resource type="CircleShape2D" id=3]
radius = 35.0143

[node name="Player1" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="PlayerHitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 1 )
shape = SubResource( 2 )

[node name="PickupZone" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupZone"]
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -50 )
current = true
zoom = Vector2( 0.5, 0.5 )

[connection signal="body_entered" from="PickupZone" to="." method="_on_PickupZone_body_entered"]
[connection signal="body_exited" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_exited"]
